--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,6 @@ jobs:
         key: ${{ secrets.VPS_SSH_KEY }}
         script: |
           cd /root/efor-vps/efor-vps
-          git pull origin main
+          git pull origin master
           source venv/bin/activate
           sudo systemctl restart efor.service
